tests/baselines/reference/computedPropertyNamesDeclarationEmit3_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit3_ES5.ts(2,5): error TS1169: A computed property name in an interface must directly refer to a built-in symbol.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit3_ES5.ts (1 errors) ====
    interface I {
        ["" + ""](): void;
        ~~~~~~~~~
!!! error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
    }